--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "debug": "DEBUG=backend:* node bin/boot-backend.js",
+    "start": "node bin/boot-backend.js"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -13,5 +14,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.18.13",
+    "gulp": "^3.9.1"
   }
 }
