--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
 version: '3'
 services:
-  web:
-    image: "node:8.9.3"
-    user: "node"
-    working_dir: /home/node/backend
+  backend:
+    build: ./backend
     environment: 
       - NPM_CONFIG_PREFIX=/home/node/.npm-global
-      - NODE_ENV=production
+      - NODE_ENV=development
       - NPM_CONFIG_LOGLEVEL=info
     ports:
-    - '3000:3000'
+      - '4000:4000'
     volumes:
-    - .:/home/node/backend
+      - ./backend:/home/node/backend
+      - backend_node_mod:/home/node/backend/node_modules
+    tty: true
+    stdin_open: true
+volumes:
+  backend_node_mod:
