--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       - ./backend:/home/node/backend
       - backend_node_mod:/home/node/backend/node_modules
+    command: npm run debug
     tty: true
     stdin_open: true
 volumes:
