--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "setup": "cd backend && npm install",
-    "server": "cd backend && npm run debug"
+    "server": "cd backend && npm run debug",
+    "ui": "cd ui && ng serve --open"
   },
   "repository": {
     "type": "git",
