Using PM2 to run backend. got rid og GULP and NODEMON

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-# This docker file uses node user to avoid running proecesses as root
+# DOCKER CONFIG FOR DEVELOPMENT ONLY
 
 # Lean Distro
 FROM node:8.9.3-alpine
@@ -6,15 +6,23 @@ FROM node:8.9.3-alpine
 # Full Distro
 # FROM node:8.9.3
 
+ENV PATH="/home/node/.npm-global/bin:${PATH}"
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
+ENV DEBUG=backend:*
+ENV PM2_HOME=/home/node/.pm2-dev
+
 WORKDIR /home/node/backend
 COPY package*.json /home/node/backend/
 
-RUN yarn global add gulp-cli
+# RUN yarn global add gulp-cli
+RUN npm install -g pm2 
 
 # Wrokaround: gulp-nodemon fails to install using this distro. We need to post install it to force it.
-RUN yarn install && yarn add gulp-nodemon 
+# RUN yarn install && yarn add gulp-nodemon 
+RUN npm install
 
-EXPOSE 4000
+EXPOSE 7000
 
 USER node
+
+CMD [ "pm2-dev", "start", "pm2.json" ]
