--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "debug": "gulp debug",
-    "start": "node bin/boot-backend.js"
+    "start": "pm2-dev start pm2.json"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -14,9 +13,5 @@
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   },
-  "devDependencies": {
-    "browser-sync": "^2.18.13",
-    "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.2.1"
-  }
+  "devDependencies": {}
 }
