--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,14 @@
     "start": "pm2-dev start pm2.json"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "winston": "^2.4.0"
   },
   "devDependencies": {}
 }
